tests/messages/errors/err_mdm_missing_txa.hl7
MSH|^~\&|DOC_APP|HOSP|RECV_APP|RECV_FAC|20260220137000||MDM^T02|MSG0016|P|2.3
EVN|T02|20260220137000
PID|1||2004^^^HOSP^MR||Test^NoTxa||19800601|F
PV1|1|O|OUTPATIENT
